# TaskCE

./: .gitattributes  .gitignore  AGENTS.md  ablation.py  ablation_patch.py  ablation_plotter.py  activation_cross_analysis.py  activation_regression_analysis.py  analyze.py  analyze_ffn_updates.py  capture_example.py  cross_model_activation_transfer.ipynb  feature_example.py  graph_builder.py  inference_compare.py  loaded_capture_pca_example.py  main.py  plot_ablation.ipynb  pyproject.toml  test_tokenizer.py  visualize_activation_cross_movements.py
WordTokenizer/: __init__.py  orchestration.py  tokenizer.py
analysis/: __init__.py  ablation.py  ablation_analysis.py  ablation_inference.py  activation_diagnostics.py  graph.py  saving.py
capture/: __init__.py  captureConfig.py  capturer.py  classification_weights.py  lora_checkpoints.py  postprocessing.py  saving.py
evaluation/: __init__.py  evalConfig.py  evaluator.py
experimental/: __init__.py  generate.py  lora_checkpoints.py  model.py
feature/: __init__.py  batch.py  beamsearch.py  construct.py  find.py  formula.py  search.py  skip.py
results/: claim_beam_results.csv  snli_beam_results.csv
results_base/: claim_beam_results.csv  snli_beam_results.csv
tests/: test_ablation.py  test_ablation_analysis.py  test_ablation_inference.py  test_ablation_plotter.py  test_activation_diagnostics.py  test_analysis_saving.py  test_analyze_outputs.py  test_beamsearch.py  test_capture.py  test_capture_saving.py  test_compositional_postprocessing.py  test_construct_features.py  test_feature_exports.py  test_formula.py  (+9 more)
(+101 files in other folders)
