[project]
name = "taskce"
version = "0.1.0"
description = ""
requires-python = "==3.12.*"
dependencies = [
    "transformers>=4.40.0",
    "trl[vllm]>=0.8.0",
    "peft>=0.10.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "torch>=2.9.0",
    "scikit-learn",
    "scipy",
    "pandas",
    "matplotlib",
    "networkx",
    "nx-cugraph-cu12",
    "wandb",
    "flash_attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu128torch2.10-cp312-cp312-linux_x86_64.whl",
    "unsloth>=2026.0.0",
    "sympy",
    "spacy",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]

[tool.uv.sources]
nx-cugraph-cu12 = { index = "nvidia" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true
